--- a/package.json
+++ b/package.json
@@ -11,20 +11,16 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
-    "next": "15.1.6",
-    "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
+    "formidable": "^3.5.2",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "typescript": "^5",
     "@types/react-dom": "^19",
     "typescript": "^5"
   }
